k8s/authservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: spring-boot-microservices-authservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  selector:
    app: authservice
  ports:
    - name: http
      port: 9000
      targetPort: 9000
